--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "swagger": "ts-node -r tsconfig-paths/register ./src/config/swagger.ts",
     "db:generate": "drizzle-kit generate --dialect=postgresql --schema=./src/db/schemas.ts",
     "db:migrate": "ts-node -r tsconfig-paths/register ./src/db/migrate.ts"
   },
@@ -16,8 +15,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
-    "drizzle-kit": "^0.21.4",
-    "swagger-autogen": "^2.23.7"
+    "drizzle-kit": "^0.21.4"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
